--- a/produtos.html
+++ b/produtos.html
@@ -1,18 +1,99 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Loja WA</title>
-  </head>
-  <body>
-    <!-- navbar -->
-    <!-- navbar -->
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>Loja WA</title>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+	</head>
+	<body>
+		<navbar>
+		<div>Loja WA</div>
+		<span>Início</span>
+		<span>Gerenciar produtos</span>
+		<button>
+			Sair
+		</button>
+		<navbar>
 
-    <!-- gerenciar produtos -->
-    <!-- gerenciar produtos -->
+		<div>
+			<div>Gerenciar Produtos:</div>
+			<div>
+				<button>Novo Produto</button>
+			</div>
+			<div class="container w-80">
+				<table class="table table-striped">
+					<thead>
+						<th scope="col">id</th>
+						<th scope="col">Produto</th>
+						<th scope="col">Preço</th>
+						<th scope="col">Estoque</th>
+						<th scope="col">Ações</th>
+					</thead>
+					<tbody>
+						<tr scope="row">
+							<td>1</td>
+							<td>Bicicleta</td>
+							<td>R$ 1.000,00</td>
+							<td>110</td>
+							<td>
+								<button type="button" class="btn btn-secondary">
+									Editar
+								</button>
+								<button type="button" class="btn btn-secondary">
+									Excluir
+								</button>
+							</td>
+						</tr>
+						<tr scope="row">
+							<td>2</td>
+							<td>Echo dot</td>
+							<td>R$ 600,00</td>
+							<td>8</td>
+							<td>
+								<button type="button" class="btn btn-secondary">
+									Editar
+								</button>
+								<button type="button" class="btn btn-secondary">
+									Excluir
+								</button>
+							</td>
+						</tr>
+						<tr scope="row">
+							<td>3</td>
+							<td>Celular</td>
+							<td>R$ 1.500,00</td>
+							<td>10</td>
+							<td>
+								<button type="button" class="btn btn-secondary">
+									Editar
+								</button>
+								<button type="button" class="btn btn-secondary">
+									Excluir
+								</button>
+							</td>
+						</tr>
+						<tr scope="row">
+							<td>4</td>
+							<td>Umidificador</td>
+							<td>R$ 100,00</td>
+							<td>0</td>
+							<td>
+								<button type="button" class="btn btn-secondary">
+									Editar
+								</button>
+								<button type="button" class="btn btn-secondary">
+									Excluir
+								</button>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
 
-    <!-- modal cadastrar produtos -->
-    <!-- modal cadastrar produtos -->
-  </body>
+		<!-- modal cadastrar produtos -->
+		<!-- modal cadastrar produtos -->
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+	</body>
 </html>
