--- a/produtos.html
+++ b/produtos.html
@@ -7,15 +7,27 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	</head>
 	<body>
-		<navbar>
-		<div>Loja WA</div>
-		<span>Início</span>
-		<span>Gerenciar produtos</span>
-		<button>
-			Sair
-		</button>
-		<navbar>
-
+		<nav class="navbar navbar-expand-lg bg-light">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="index.html">Loja WA</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#content" aria-controls="content" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="content">
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a class="nav-link" href="index.html">Início</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" href="produtos.html">Gerenciar produtos</a>
+						</li>
+					</ul>
+				</div>
+				<form>
+					<button type="submit" class="btn btn-secondary">Sair</button>
+				</form>
+			</div>
+		</nav>
 		<div class="container d-flex flex-column">
 			<div>
 				<div>Gerenciar Produtos:</div>
