--- a/index.html
+++ b/index.html
@@ -7,35 +7,82 @@
 		<title>Loja WA</title>
 	</head>
 	<body>
-		<nav class="navbar navbar-expand-lg bg-light">
-			<div class="container-fluid">
-				<a class="navbar-brand" href="index.html">Loja WA</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#content" aria-controls="content" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="content">
-					<ul class="navbar-nav">
-						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="index.html">Início</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="produtos.html">Gerenciar produtos</a>
-						</li>
-					</ul>
+		<header>
+			<nav class="navbar navbar-expand-lg bg-light">
+				<div class="container-fluid">
+					<a class="navbar-brand" href="index.html">Loja WA</a>
+					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#content" aria-controls="content" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse" id="content">
+						<ul class="navbar-nav">
+							<li class="nav-item">
+								<a class="nav-link active" aria-current="page" href="index.html">Início</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="produtos.html">Gerenciar produtos</a>
+							</li>
+						</ul>
+					</div>
+					<form>
+						<button type="submit" class="btn btn-secondary">Sair</button>
+					</form>
 				</div>
-				<form>
-					<button type="submit" class="btn btn-secondary">Sair</button>
-				</form>
-			</div>
-		</nav>
+			</nav>
+		</header>
 
-		<div>Produtos</div>
-		<div class="row">
-			<div class="col d-flex justify-content-center">coluna1</div>
-			<div class="col d-flex justify-content-center">coluna2</div>
-			<div class="col d-flex justify-content-center">coluna3</div>
-			<div class="col d-flex justify-content-center">coluna4</div>
-		</div>
+		<main>
+			<div class="container w-75">
+				<div class="row">
+					<h6>Produtos</h6>
+				</div>
+				<div class="row">
+					<div class="col card rounded p-0 me-1">
+						<div class="card-img-top" src="" alt="">
+							<img src=""/>
+						</div>
+						<div class="card-body">
+							<h6 class="card-title">Bicicleta</h6>
+							<span class="card-text text-secondary mb-1">R$ 1.000,00</span>
+							<button type="button" class="btn btn-primary my-2 w-100">Adicionar ao carrinho</button>
+						</div>
+					</div>
+
+					<div class="col card rounded p-0 mx-1">
+						<div class="card-img-top" src="" alt="">
+							<img src=""/>
+						</div>
+						<div class="card-body">
+							<h6 class="card-title">Echo dot</h6>
+							<span class="card-text text-secondary mb-1">R$ 600,00</span>
+							<button type="button" class="btn btn-primary my-2 w-100">Adicionar ao carrinho</button>
+						</div>
+					</div>
+
+					<div class="col card rounded p-0 mx-1">
+						<div class="card-img-top" src="" alt="">
+							<img src=""/>
+						</div>
+						<div class="card-body">
+							<h6 class="card-title">Celular</h6>
+							<span class="card-text text-secondary mb-1">R$ 1.500,00</span>
+							<button type="button" class="btn btn-primary my-2 w-100">Adicionar ao carrinho</button>
+						</div>
+					</div>
+
+					<div class="col card rounded p-0 ms-1">
+						<div class="card-img-top" src="" alt="">
+							<img src=""/>
+						</div>
+						<div class="card-body">
+							<h6 class="card-title">Umidificador</h6>
+							<span class="card-text text-secondary mb-1">R$ 100,00</span>
+							<button type="button" class="btn btn-secondary my-2 w-100">Indisponível</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</main>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 	</body>
 </html>
