--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 		<title>Loja WA</title>
 	</head>
-	<body>
+	<body class>
 		<header>
-			<nav class="navbar navbar-expand-lg bg-light">
+			<nav class="navbar navbar-expand-md bg-light">
 				<div class="container-fluid">
 					<a class="navbar-brand" href="index.html">Loja WA</a>
 					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#content" aria-controls="content" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,9 +22,12 @@
 							<li class="nav-item">
 								<a class="nav-link" href="produtos.html">Gerenciar produtos</a>
 							</li>
+							<li class="nav-item">
+								<a class="nav-link d-block d-md-none" href="#">Sair</a>
+							</li>
 						</ul>
 					</div>
-					<form>
+					<form class="d-none d-md-block">
 						<button type="submit" class="btn btn-secondary">Sair</button>
 					</form>
 				</div>
@@ -32,52 +35,60 @@
 		</header>
 
 		<main>
-			<div class="container w-75">
-				<div class="row">
-					<h6>Produtos</h6>
+			<div class="container w-75 mt-5">
+				<div class="row mb-3">
+					<h6>Produtos:</h6>
 				</div>
-				<div class="row">
-					<div class="col card rounded p-0 me-1">
-						<div class="card-img-top" src="" alt="">
-							<img src=""/>
-						</div>
-						<div class="card-body">
-							<h6 class="card-title">Bicicleta</h6>
-							<span class="card-text text-secondary mb-1">R$ 1.000,00</span>
-							<button type="button" class="btn btn-primary my-2 w-100">Adicionar ao carrinho</button>
-						</div>
-					</div>
-
-					<div class="col card rounded p-0 mx-1">
-						<div class="card-img-top" src="" alt="">
-							<img src=""/>
-						</div>
-						<div class="card-body">
-							<h6 class="card-title">Echo dot</h6>
-							<span class="card-text text-secondary mb-1">R$ 600,00</span>
-							<button type="button" class="btn btn-primary my-2 w-100">Adicionar ao carrinho</button>
+				<div class="row gx-2 gy-2">
+					<div class="col-md-3 col-sm-6 col-12">
+						<div class="card rounded p-0">
+							<div class="card-img-top" alt="Bicicleta">
+								<img class="w-100 h-100" src="./assets/placeholder-image.png"/>
+							</div>
+							<div class="card-body">
+								<h6 class="card-title">Bicicleta</h6>
+								<span class="card-text text-secondary mb-1">R$ 1.000,00</span>
+								<button type="button" class="btn btn-primary my-2 w-100">Adicionar ao carrinho</button>
+							</div>
 						</div>
 					</div>
 
-					<div class="col card rounded p-0 mx-1">
-						<div class="card-img-top" src="" alt="">
-							<img src=""/>
-						</div>
-						<div class="card-body">
-							<h6 class="card-title">Celular</h6>
-							<span class="card-text text-secondary mb-1">R$ 1.500,00</span>
-							<button type="button" class="btn btn-primary my-2 w-100">Adicionar ao carrinho</button>
+					<div class="col-md-3 col-sm-6 col-12">
+						<div class="card rounded p-0">
+							<div class="card-img-top" src="" alt="Echo dot">
+								<img class="w-100 h-100" src="./assets/placeholder-image.png"/>
+							</div>
+							<div class="card-body">
+								<h6 class="card-title">Echo dot</h6>
+								<span class="card-text text-secondary mb-1">R$ 600,00</span>
+								<button type="button" class="btn btn-primary my-2 w-100">Adicionar ao carrinho</button>
+							</div>
 						</div>
 					</div>
 
-					<div class="col card rounded p-0 ms-1">
-						<div class="card-img-top" src="" alt="">
-							<img src=""/>
+					<div class="col-md-3 col-sm-6 col-12">
+						<div class="card rounded p-0">
+							<div class="card-img-top" src="" alt="Celular">
+								<img class="w-100 h-100" src="./assets/placeholder-image.png"/>
+							</div>
+							<div class="card-body">
+								<h6 class="card-title">Celular</h6>
+								<span class="card-text text-secondary mb-1">R$ 1.500,00</span>
+								<button type="button" class="btn btn-primary my-2 w-100">Adicionar ao carrinho</button>
+							</div>
 						</div>
-						<div class="card-body">
-							<h6 class="card-title">Umidificador</h6>
-							<span class="card-text text-secondary mb-1">R$ 100,00</span>
-							<button type="button" class="btn btn-secondary my-2 w-100">Indisponível</button>
+					</div>
+
+					<div class="col-md-3 col-sm-6 col-12">
+						<div class="card rounded p-0">
+							<div class="card-img-top" src="" alt="Umidificador">
+								<img class="w-100 h-100" src="./assets/placeholder-image.png"/>
+							</div>
+							<div class="card-body">
+								<h6 class="card-title">Umidificador</h6>
+								<span class="card-text text-secondary mb-1">R$ 100,00</span>
+								<button type="button" class="btn btn-secondary my-2 w-100">Indisponível</button>
+							</div>
 						</div>
 					</div>
 				</div>
