--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				</div>
 				<div class="row gx-2 gy-2">
 					<div class="col-md-3 col-sm-6 col-12">
-						<div class="card rounded p-0">
+						<div class="card rounded shadow-sm">
 							<div class="card-img-top" alt="Bicicleta">
 								<img class="w-100 h-100" src="./assets/placeholder-image.png"/>
 							</div>
@@ -54,7 +54,7 @@
 					</div>
 
 					<div class="col-md-3 col-sm-6 col-12">
-						<div class="card rounded p-0">
+						<div class="card rounded shadow-sm">
 							<div class="card-img-top" src="" alt="Echo dot">
 								<img class="w-100 h-100" src="./assets/placeholder-image.png"/>
 							</div>
@@ -67,7 +67,7 @@
 					</div>
 
 					<div class="col-md-3 col-sm-6 col-12">
-						<div class="card rounded p-0">
+						<div class="card rounded shadow-sm">
 							<div class="card-img-top" src="" alt="Celular">
 								<img class="w-100 h-100" src="./assets/placeholder-image.png"/>
 							</div>
@@ -80,7 +80,7 @@
 					</div>
 
 					<div class="col-md-3 col-sm-6 col-12">
-						<div class="card rounded p-0">
+						<div class="card rounded shadow-sm">
 							<div class="card-img-top" src="" alt="Umidificador">
 								<img class="w-100 h-100" src="./assets/placeholder-image.png"/>
 							</div>
@@ -93,7 +93,7 @@
 					</div>
 				</div>
 			</div>
-		</main>
+			</main>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 	</body>
 </html>
