--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 								<a class="nav-link active" aria-current="page" href="index.html">Início</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="produtos.html">Gerenciar produtos</a>
+								<a class="nav-link" href="#">Gerenciar produtos</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link d-block d-md-none" href="#">Sair</a>
@@ -39,7 +39,7 @@
 				<div class="row mb-3">
 					<h6>Produtos:</h6>
 				</div>
-				<div class="row gx-2 gy-2">
+				<div class="row gx-3 gy-3">
 					<div class="col-md-3 col-sm-6 col-12">
 						<div class="card rounded shadow-sm">
 							<div class="card-img-top" alt="Bicicleta">
