--- a/produtos.html
+++ b/produtos.html
@@ -35,86 +35,115 @@
 			</nav>
 		</header>
 
-		<div class="container d-flex flex-column">
-			<div>
-				<div>Gerenciar Produtos:</div>
+		<main>
+			<div class="mt-5">
+				<div class="container d-flex flex-column w-75">
+					<div>
+						<h6>Gerenciar Produtos:</h6>
+					</div>
+					<div class="d-flex align-self-end">
+						<button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#modal-novo-produto">Novo Produto</button>
+					</div>
+				</div>
+				<div class="container w-75">
+					<table class="table table-striped">
+						<thead>
+							<th scope="col">id</th>
+							<th scope="col">Produto</th>
+							<th scope="col">Preço</th>
+							<th scope="col">Estoque</th>
+							<th scope="col">Ações</th>
+						</thead>
+						<tbody>
+							<tr scope="row">
+								<td>1</td>
+								<td>Bicicleta</td>
+								<td>R$ 1.000,00</td>
+								<td>110</td>
+								<td>
+									<button type="button" class="btn btn-secondary">
+										Editar
+									</button>
+									<button type="button" class="btn btn-secondary">
+										Excluir
+									</button>
+								</td>
+							</tr>
+							<tr scope="row">
+								<td>2</td>
+								<td>Echo dot</td>
+								<td>R$ 600,00</td>
+								<td>8</td>
+								<td>
+									<button type="button" class="btn btn-secondary">
+										Editar
+									</button>
+									<button type="button" class="btn btn-secondary">
+										Excluir
+									</button>
+								</td>
+							</tr>
+							<tr scope="row">
+								<td>3</td>
+								<td>Celular</td>
+								<td>R$ 1.500,00</td>
+								<td>10</td>
+								<td>
+									<button type="button" class="btn btn-secondary">
+										Editar
+									</button>
+									<button type="button" class="btn btn-secondary">
+										Excluir
+									</button>
+								</td>
+							</tr>
+							<tr scope="row">
+								<td>4</td>
+								<td>Umidificador</td>
+								<td>R$ 100,00</td>
+								<td>0</td>
+								<td>
+									<button type="button" class="btn btn-secondary">
+										Editar
+									</button>
+									<button type="button" class="btn btn-secondary">
+										Excluir
+									</button>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
 			</div>
-			<div class="d-flex align-self-end">
-				<button class="btn btn-warning">Novo Produto</button>
-			</div>
-		</div>
-		<div class="container w-80">
-			<table class="table table-striped">
-				<thead>
-					<th scope="col">id</th>
-					<th scope="col">Produto</th>
-					<th scope="col">Preço</th>
-					<th scope="col">Estoque</th>
-					<th scope="col">Ações</th>
-				</thead>
-				<tbody>
-					<tr scope="row">
-						<td>1</td>
-						<td>Bicicleta</td>
-						<td>R$ 1.000,00</td>
-						<td>110</td>
-						<td>
-							<button type="button" class="btn btn-secondary">
-								Editar
-							</button>
-							<button type="button" class="btn btn-secondary">
-								Excluir
-							</button>
-						</td>
-					</tr>
-					<tr scope="row">
-						<td>2</td>
-						<td>Echo dot</td>
-						<td>R$ 600,00</td>
-						<td>8</td>
-						<td>
-							<button type="button" class="btn btn-secondary">
-								Editar
-							</button>
-							<button type="button" class="btn btn-secondary">
-								Excluir
-							</button>
-						</td>
-					</tr>
-					<tr scope="row">
-						<td>3</td>
-						<td>Celular</td>
-						<td>R$ 1.500,00</td>
-						<td>10</td>
-						<td>
-							<button type="button" class="btn btn-secondary">
-								Editar
-							</button>
-							<button type="button" class="btn btn-secondary">
-								Excluir
-							</button>
-						</td>
-					</tr>
-					<tr scope="row">
-						<td>4</td>
-						<td>Umidificador</td>
-						<td>R$ 100,00</td>
-						<td>0</td>
-						<td>
-							<button type="button" class="btn btn-secondary">
-								Editar
-							</button>
-							<button type="button" class="btn btn-secondary">
-								Excluir
-							</button>
-						</td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
+		</main>
 
-		<!-- modal cadastrar produtos -->
-		<!-- modal cadastrar produtos -->
+		<div class="modal fade mt-5" id="modal-novo-produto" tabindex="-1" role="dialog" aria-labelldby="modal-label" aria-hidden="true">
+			<div class="modal-dialog modal-dialog-centered" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h6 class="modal-title" id="modal-label">Novo Produto</h6>
+						<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+					</div>
+					<div class="modal-body">
+						<form>
+							<div class="mb-3">
+								<label for="input-produto" class="form-label">Produto</label>
+								<input type="text" id="input-produto" class="form-control"/>
+							</div>
+							<div class="mb-3">
+								<label for="input-preco" class="form-label">Preço</label>
+								<input type="number" id="input-preco" class="form-control"/>
+							</div>
+							<div class="mb-3">
+								<label for="input-estoque" class="form-label">Estoque</label>
+								<input type="number" id="input-estoque" class="form-control"/>
+							</div>
+							<button class="btn btn-success w-100">Continuar Cadastro</button>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 	</body>
 </html>
