--- a/produtos.html
+++ b/produtos.html
@@ -101,7 +101,7 @@
 								<td>4</td>
 								<td>Umidificador</td>
 								<td>R$ 100,00</td>
-								<td>0</td>
+								<td class="text-danger">0</td>
 								<td>
 									<button type="button" class="btn btn-secondary">
 										Editar
