--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 								<a class="nav-link active" aria-current="page" href="index.html">Início</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">Gerenciar produtos</a>
+								<a class="nav-link" href="produtos.html">Gerenciar produtos</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link d-block d-md-none" href="#">Sair</a>
