--- a/produtos.html
+++ b/produtos.html
@@ -128,17 +128,17 @@
 						<form>
 							<div class="mb-3">
 								<label for="input-produto" class="form-label">Produto</label>
-								<input type="text" id="input-produto" class="form-control"/>
+								<input type="text" id="input-produto" class="form-control" required/>
 							</div>
 							<div class="mb-3">
 								<label for="input-preco" class="form-label">Preço</label>
-								<input type="number" id="input-preco" class="form-control"/>
+								<input type="number" id="input-preco" class="form-control" required/>
 							</div>
 							<div class="mb-3">
 								<label for="input-estoque" class="form-label">Estoque</label>
-								<input type="number" id="input-estoque" class="form-control"/>
+								<input type="number" id="input-estoque" class="form-control" required/>
 							</div>
-							<button class="btn btn-success w-100">Continuar Cadastro</button>
+							<button type="submit" class="btn btn-success w-100">Continuar Cadastro</button>
 						</form>
 					</div>
 				</div>
