--- a/cadastro.html
+++ b/cadastro.html
@@ -7,12 +7,12 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	</head>
 	<body>
-		<div class="container m-0">
+		<main class="container m-0">
 			<div class="row vh-100 vw-100 ">
-				<div class="col-4 d-flex align-items-center justify-content-center bg-light">
+				<div class="col-12 col-md-4 d-flex align-items-center justify-content-center bg-light">
 					<h2>Bem vindo à WA Loja!</h2>
 				</div>
-				<div class="col-8 d-flex flex-column align-items-center justify-content-center">
+				<div class="col-12 col-md-8 d-flex flex-column align-items-center justify-content-center">
 					<form>
 						<div class="mb-3">
 							<label for="input-nome" class="form-label">Nome</label>
